codex-src/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_cycle_with_context.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                            "
"› Ask Retrace to do anything                                "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"  Tab changes mode · [Plan]              100% context left  "
